# SchoolCRM

./: .gitignore  AuthorizationDialog.cpp  AuthorizationDialog.h  AuthorizationDialog.ui  AuthorizationWindow.cpp  AuthorizationWindow.h  AuthorizationWindow.ui  CMakeLists.txt  ComboBoxFinderView.cpp  ComboBoxFinderView.h  ItemWidget.cpp  ItemWidget.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  SubjectsModule.h  TransitionFactrory.h  UserError.cpp  UserError.h  WidgetsListDelegate.cpp  WidgetsListDelegate.h  WidgetsListView.cpp  WidgetsListView.h  readme.md
ChooseAndFindEntities/: ChooseAndFindClass.cpp  ChooseAndFindClass.h  ChooseAndFindConcept.cpp  ChooseAndFindConcept.h  ChooseAndFindPerson.cpp  ChooseAndFindPerson.h  ChooseAndFindRole.cpp  ChooseAndFindRole.h  ChooseAndFindStudent.cpp  ChooseAndFindStudent.h  ChooseAndFindSubject.cpp  ChooseAndFindSubject.h
Classes/: ClassCreationDialog.cpp  ClassCreationDialog.h  ClassCreationDialog.ui  ClassStudentsModel.cpp  ClassStudentsModel.h  ClassSubjectsModel.cpp  ClassSubjectsModel.h  ClassesModel.cpp  ClassesModel.h  ClassesModule.cpp  ClassesModule.h  ClassesModule.ui
Journal/: FakePersonsModel.cpp  FakePersonsModel.h  JournalModel.cpp  JournalModel.h  JournalModule.cpp  JournalModule.h  JournalModule.ui  MarkCreatingDialog.cpp  MarkCreatingDialog.h  MarkCreatingDialog.ui  MarkDelegate.cpp  MarkDelegate.h  MarkTypeSelector.cpp  MarkTypeSelector.h
ListItemConcept/: ListItemConcept.cpp  ListItemConcept.h  MenuOfNewListItem.cpp  MenuOfNewListItem.h  MenuOfRegularListItem.cpp  MenuOfRegularListItem.h  NewRoleListItem.cpp  NewRoleListItem.h  NewSubjectListItem.cpp  NewSubjectListItem.h  NewTeacherSubjectListItem.cpp  NewTeacherSubjectListItem.h  RegularRoleListItem.cpp  RegularRoleListItem.h  RegularSubjectListItem.cpp  RegularSubjectListItem.h
Menu/: AboutDialog.cpp  AboutDialog.ui
PersonCardConcept/: NewPersonCard.cpp  NewPersonCard.h  PersonCardConcept.cpp  PersonCardConcept.h  RegularPersonCard.cpp  RegularPersonCard.h
Persons/: CreatePersonDialog.cpp  CreatePersonDialog.h  PersonCreationDialog.cpp  PersonCreationDialog.h  PersonEdtitionWidget.cpp  PersonEdtitionWidget.h  PersonWidget.cpp  PersonWidget.h  PersonWidget.ui  PersonsModel.cpp  PersonsModel.h  PersonsModule.cpp  PersonsModule.h  PersonsModule.ui  PersonsWidget.cpp  PersonsWidget.h  PersonsWidget.ui  ShowPerson.cpp  ShowPerson.h
Roles/: CreateRoleDialog.cpp  CreateRoleDialog.h  CreateRoleDialog.ui  RoleCreationDialog.cpp  RoleCreationDialog.h  RoleCreationDialog.ui  RolesModel.cpp  RolesModel.h  RolesModule.cpp  RolesModule.h  RolesModule.ui  RolesWidget.cpp  RolesWidget.h  RolesWidget.ui
SchoolApi_v2.0.0/: CMakeLists.txt  create_school_database.sql
SchoolApi_v2.0.0/SchoolApi/: ApiBaseHeader.h  ApiError.cpp  ApiError.h  Class.cpp  Class.h  ClassSubjectsList.cpp  ClassSubjectsList.h  Classmate.cpp  Classmate.h  Connection.cpp  Connection.h  Person.cpp  Person.h  Role.cpp  Role.h  Student.cpp  Student.h  StudentMark.cpp  StudentMark.h  Subject.cpp  Subject.h  TeacherSubjectsList.cpp  TeacherSubjectsList.h
SchoolApi_v2.0.0/Tests/: Config.cpp  Config.h  TestClass.cpp  TestClass.h  TestClassSubjectsList.cpp  TestClassSubjectsList.h  TestClassmate.cpp  TestClassmate.h  TestConnection.cpp  TestConnection.h  TestPerson.cpp  TestPerson.h  TestRole.cpp  TestRole.h  TestStudent.cpp  TestStudent.h  TestStudentMark.cpp  TestStudentMark.h  TestSubject.cpp  TestSubject.h  TestTeacherSubjectsList.cpp  TestTeacherSubjectsList.h  main.cpp
Subjects/: CreateSubjectDialog.cpp  CreateSubjectDialog.h  CreateSubjectDialog.ui  SubjectsModel.cpp  SubjectsModel.h  SubjectsModule.cpp  SubjectsModule.h  SubjectsModule.ui
SubjectsOfTeacher/: SubjectsOfTeacherModel.cpp  SubjectsOfTeacherModel.h  SubjectsOfTeacherModule.cpp  SubjectsOfTeacherModule.h  SubjectsOfTeacherModule.ui
Tools/: FuzzySearchTools.h  MarkTypeSelector.h  SmartEdit.cpp  SmartEdit.h
WZC/: AddAndFindWZC.cpp  AddAndFindWZC.h  CustomListModel.cpp  CustomListModel.h  ListedAddAndFindWZC.cpp  ListedAddAndFindWZC.h  RolesWidget.cpp  RolesWidget.h  WorkZoneConcept.cpp  WorkZoneConcept.h
